--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "styled-components": "^5.3.0",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
@@ -37,6 +38,7 @@
     },
     "devDependencies": {
         "@types/react-router-dom": "^5.1.8",
+        "@types/styled-components": "^5.1.11",
         "@typescript-eslint/eslint-plugin": "^4.28.3",
         "@typescript-eslint/parser": "^4.28.4-alpha.0",
         "eslint": "^7.30.0",
