Implementation of connection with GitHub API using axios and error message component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,16 @@
             }
         ],
         "import/prefer-default-export": "off",
+        "camelcase": "off",
+        "@typescript-eslint/camelcase": [
+            "off"
+        ],
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            {
+                "allowExpressions": true
+            }
+        ],
         "import/extensions": [
             "error",
             "ignorePackages",
