--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-one-expression-per-line": "off",
+        "react/prop-types": "off",
         "react/jsx-filename-extension": [
             1,
             {
